shift inventory to be shorter on initial setup

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -124,59 +124,13 @@ ipaserver
 ipareplicas
 ipaclients
 
-
-; Based on exam requirements, these vars might have to be set differently
 [ipa:vars]
-; if you are using an ntp server, set to false and  set ipaclient_ntp_servers
-; ipaclient_no_ntp=false
-; ipaclient_ntp_servers='["192.168.15.12"]'
-ipaclient_no_ntp=true
-; we plan on setting up roaming home directories. setting this
-; to true shouldn't hurt.
-ipaclient_mkhomedir=true
-ipaclient_ssh_trust_dns=true
 
 [ipaserver:vars]
-ipaadmin_principal=admin
-ipaadmin_password='Passw0rd!'
-ipadm_password='Passw0rd!'
-
-ipaserver_domain=example.com
-ipaserver_realm=EXAMPLE.COM
-ipaserver_setup_dns=true
-ipaserver_setup_kra=true
-ipaserver_setup_firewalld=true
-ipaserver_no_forwarders=true
-ipaserver_auto_forwarders=false
-ipaserver_no_host_dns=true
-ipaserver_reverse_zones='["15.168.192.in-addr.arpa."]'
-ipaserver_external_ca=false
-; ipaserver_setup_adtrust=true
-; ipaserver_netbios_name=EXAMPLEAD
 
 [ipareplica:vars]
-ipaadmin_principal=admin
-ipaadmin_password='Passw0rd!'
-ipadm_password='Passw0rd!'
-
-ipaserver_realm=EXAMPLE.COM
-ipareplica_domain=example.com
-ipareplica_setup_ca=true
-ipareplica_setup_dns=true
-ipareplica_setup_kra=true
-ipareplica_setup_firewalld=true
-ipareplica_no_forwarders=true
-ipareplica_auto_forwarders=false
-; ipareplica_setup_adtrust=true
-; ipareplica_netbios_name=EXAMPLEAD
 
 [ipaclients:vars]
-ipaclient_domain=example.com
-ipaclient_realm=EXAMPLE.COM
-; the reason why we have a separate principal and password
-; is because we may have a service account that enrolls instead
-ipaadmin_principal=admin
-ipaadmin_password='Passw0rd!'
 
 [ipaserver]
 idm1.example.com    ansible_host=192.168.15.2
@@ -292,6 +246,82 @@ At this point, you will need to configure all the clients with an ansible user a
 
         We also suggested ansible.posix. You may not also have access to this on the exam.
 
+    Modify the inventory with the necessary variables and domain information.
+
+    ``` ini
+    [ipa:children]
+    ipaserver
+    ipareplicas
+    ipaclients
+
+    ; Based on exam requirements, these vars might have to be set differently
+    [ipa:vars]
+    ; if you are using an ntp server, set to false and  set ipaclient_ntp_servers
+    ; ipaclient_no_ntp=false
+    ; ipaclient_ntp_servers='["192.168.15.12"]'
+    ipaclient_no_ntp=true
+    ; we plan on setting up roaming home directories. setting this
+    ; to true shouldn't hurt.
+    ipaclient_mkhomedir=true
+    ipaclient_ssh_trust_dns=true
+
+    [ipaserver:vars]
+    ipaadmin_principal=admin
+    ipaadmin_password='Passw0rd!'
+    ipadm_password='Passw0rd!'
+
+    ipaserver_domain=example.com
+    ipaserver_realm=EXAMPLE.COM
+    ipaserver_setup_dns=true
+    ipaserver_setup_kra=true
+    ipaserver_setup_firewalld=true
+    ipaserver_no_forwarders=true
+    ipaserver_auto_forwarders=false
+    ipaserver_no_host_dns=true
+    ipaserver_reverse_zones='["15.168.192.in-addr.arpa."]'
+    ipaserver_external_ca=false
+    ; ipaserver_setup_adtrust=true
+    ; ipaserver_netbios_name=EXAMPLEAD
+
+    [ipareplica:vars]
+    ipaadmin_principal=admin
+    ipaadmin_password='Passw0rd!'
+    ipadm_password='Passw0rd!'
+
+    ipaserver_realm=EXAMPLE.COM
+    ipareplica_domain=example.com
+    ipareplica_setup_ca=true
+    ipareplica_setup_dns=true
+    ipareplica_setup_kra=true
+    ipareplica_setup_firewalld=true
+    ipareplica_no_forwarders=true
+    ipareplica_auto_forwarders=false
+    ; ipareplica_setup_adtrust=true
+    ; ipareplica_netbios_name=EXAMPLEAD
+
+    [ipaclients:vars]
+    ipaclient_domain=example.com
+    ipaclient_realm=EXAMPLE.COM
+    ; the reason why we have a separate principal and password
+    ; is because we may have a service account that enrolls instead
+    ipaadmin_principal=admin
+    ipaadmin_password='Passw0rd!'
+
+    [ipaserver]
+    idm1.example.com    ansible_host=192.168.15.2
+
+    [ipareplica]
+    idm2.example.com    ansible_host=192.168.15.2
+
+    [ipaclients]
+    ansible.example.com ansible_connection=local
+    client.example.com  ansible_host=192.168.15.10
+    nfs.example.com     ansible_host=192.168.15.11
+    utility.example.com ansible_host=192.168.15.12
+    ```
+
+    Create the role.
+
     ``` yaml
     % vi role_ipa_server.yml
     ---
@@ -343,6 +373,12 @@ At this point, you will need to configure all the clients with an ansible user a
             ipaadmin_principal: "{{ ipaadmin_principal }}"
             ipaadmin_password: "{{ ipaadmin_password }}"
             allow_sync_ptr: true
+    ```
+
+    Run the role to setup the server.
+
+    ``` bash
+    % ansible-playbook role_ipa_server.yml
     ```
 
 ### Install and configure a replica IdM Server
