add ansible steps 2/?

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -416,7 +416,54 @@ At this point, you will need to configure all the clients with an ansible user a
 
 === "Ansible"
 
-    . . .
+    % vi role_ipa_replica.yml
+    ---
+    - name: "Standup IPA Replica"
+      hosts: ipareplicas
+      become: true
+
+      pre_tasks:
+        # ensure hostname is what is expected
+        - name: "Set hostname"
+          ansible.builtin.hostname:
+            name: idm2.example.com
+            use: systemd
+
+        # This sets up network manager using community.general.
+        - name: "Set static address"
+          community.general.nmcli:
+            ifname: enp1s0
+            conn_name: enp1s0
+            type: ethernet
+            method4: manual
+            ip4:
+              - 192.168.15.3/24
+            gw4: 192.168.15.1
+            dns4_search: example.com
+            dns4: 192.168.15.2
+            autoconnect: true
+            state: present
+
+        - name: "Ensure firewalld rules are accurate"
+          ansible.posix.firewalld:
+            service: "{{ item }}"
+            permanent: true
+            immediate: true
+            state: enabled
+          with_items:
+            - "freeipa-4"
+            - "dns"
+
+      roles:
+        - role: freeipa.ansible_freeipa.ipareplica
+          state: present
+    ```
+
+    Run the role to setup the replica.
+
+    ``` bash
+    % ansible-playbook role_ipa_replica.yml
+    ```
 
 ### Create Users, Groups, and Policies
 
@@ -503,7 +550,142 @@ At this point, you will need to configure all the clients with an ansible user a
 
 === "Ansible"
 
-    . . .
+    ``` bash
+    % vi create_ipa_users.yml
+    ```
+
+    ``` yaml
+    ---
+    - name: "Create users"
+      hosts: ipaserver
+      become: false
+      vars:
+        # All users are setup as a dictionary
+        users:
+          - name: jsmith
+            first: John
+            last: Smith
+            password: "CentOS123!$"
+          - name: brufus
+            first: Bob
+            last: Rufus
+            password: "CentOS123!$"
+          - name: ldufus
+            first: Larry
+            last: Dufus
+            password: "CentOS123!$"
+          - name: syshostmgt
+            first: SysHost
+            last: Management
+            uid: 10000
+            gid: 10000
+            password: "CentOS123!$"
+          - name: tsnyder
+            first: Thomas
+            last: Snyder
+            password: "CentOS123!$"
+        staged_users:
+          - name: rcole
+            first: Robert
+            last: Cole
+        preserved_users:
+          - tsnyder
+
+      tasks:
+        - name: Create all users
+          freeipa.ansible_freeipa.ipauser:
+            ipaadmin_password: "{{ ipaadmin_password }}"
+            users: "{{ users }}"
+
+        - name: Preserve users
+          freeipa.ansible_freeipa.ipauser:
+            ipaadmin_password: "{{ ipaadmin_password }}"
+            name: "{{ item }}"
+            state: absent
+            preserve: true
+
+        # The current freeipa collection doesn't support staged users
+        - name: kinit as admin
+          ansible.builtin.shell: "set -o pipefail && echo \"{{ ipaadmin_password }}\" | kinit {{ ipa_admin }}"
+
+        - name: Stage users
+          ansible.builtin.shell: 'ipa stageuser-add --first="{{ item.first }}" --last="{{ item.last }}" {{ item.name }}'
+          loop: "{{ staged_users }}"
+    ```
+
+    ``` bash
+    % vi create_ipa_groups.yml
+    ```
+
+    ``` yaml
+    ---
+    - name: "Create groups and add users to them"
+      hosts: ipaserver
+      become: false
+      vars:
+        groups:
+          - name: admins
+            user:
+              - jsmith
+          - name: HelpDesk
+            nonposix: true
+            user:
+              - ldufus
+          - name: enrollers
+            nonposix: true
+          - name: corp
+            posix: true
+            user:
+              - brufus
+
+      tasks:
+        - name: Create all groups
+          freeipa.ansible_freeipa.ipagroup:
+            ipaadmin_password: "{{ ipaadmin_password }}"
+            groups: "{{ groups }}"
+    ```
+
+    ``` bash
+    % vi create_ipa_policy.yml
+    ```
+
+    ``` yaml
+    ---
+    - name: "Create policies"
+      hosts: ipaserver
+      become: false
+      vars:
+        roles:
+          - name: "Host Manager"
+            privilege:
+              - Host administrators
+              - Host group administrators
+              - Netgroups administrators
+              - Host enrollment
+            user:
+              - syshostmgt
+          - name: "helpdesk"
+            privilege:
+              - Modify Group membership
+              - Modify Users and Reset passwords
+            group:
+              - HelpDesk
+          - name: "Enrollment Administrator"
+            privilege:
+              - Host Enrollment
+            group:
+              - enrollers
+
+      tasks:
+        - name: "Ensure all roles exist"
+          freeipa.ansible_freeipa.iparole:
+            ipaadmin_password: "{{ ipaadmin_principal }}"
+            name: "{{ item.name }}"
+            privilege: "{{ item.privilege|default(omit) }}"
+            group: "{{ item.group|default(omit) }}"
+            user: "{{ item.user|default(omit) }}"
+          loop: "{{ roles }}"
+    ```
 
 #### New Passwords Expired
 
@@ -677,11 +859,36 @@ When a domain supports the KRA role, it can hold password vaults or anything tha
     % ipa-kra-install
     ```
 
+    Create a private vault (as a user)
+
+    ``` bash
+    % kinit admin
+    % ipa vault-add admin_private --desc "Admin Private Vault"
+    ```
+
     (more to come)
 
 === "Ansible"
 
     If you are following the ansible method, you already have this role installed based on the inventory configuration. Now it's a matter of creating a simple secret.
+
+    ``` yaml
+    ---
+    - name: "Create Simple Vault"
+      hosts: ipaserver
+      become: true
+
+      tasks:
+        - name: "Create vault with simple data"
+          freeipa.ansible_freeipa.ipavault:
+            ipaadmin_password: "{{ ipaadmin_password }}"
+            name: simplevault
+            description: "A simple vault"
+            username: admin
+            password: "VaultPassword21!"
+            data: "Simple data"
+          action: member
+    ```
 
 ## Create and configure IdM users and user policies
 
@@ -931,7 +1138,7 @@ server 192.168.15.12
 
 ### Configure firewall on all IdM components
 
-If the domain is working, then you setup firewalld appropriately.
+If the domain is working, then you setup firewalld correctly.
 
 ### Back up an IdM infrastructure
 
