move ad trust section

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -14,7 +14,7 @@ The list of objectives can be found [here](https://www.redhat.com/en/services/tr
 
 ## Overview
 
-The video series goes over setting up FreeIPA in a lab/VM environment by following the objectives as outlined by Red Hat. The list of objectives can be found [here](https://www.redhat.com/en/services/training/ex362-red-hat-certified-specialist-identity-management-exam).
+This series goes over setting up FreeIPA in a lab/VM environment by following the objectives as outlined by Red Hat. The list of objectives can be found [here](https://www.redhat.com/en/services/training/ex362-red-hat-certified-specialist-identity-management-exam).
 
 !!! warning "Multi-method"
 
@@ -24,7 +24,7 @@ The video series goes over setting up FreeIPA in a lab/VM environment by followi
 
 ## Exam Information
 
-The EX362 exam tests your knowledge in a real world format style test - Meaning just like any Red Hat exam, it is performance-based and you perform tasks as if you were on the job. You are evaluated on the tasks you perform and if they meet the objective criteria. The EX362 is related to FreeIPA or Red Hat Identity Management and counts toward the RHCA (Red Hat Certified Architect). You are expected to have familiarity with ansible for this exam.
+The EX362 exam tests your knowledge in a real world format style test - Meaning just like any Red Hat exam, it is performance-based and you perform tasks as if you were on the job. You are evaluated on the tasks you perform and if they meet the objective criteria. The EX362 is related to FreeIPA or Red Hat Identity Management and counts toward the RHCA (Red Hat Certified Architect). You are expected to have familiarity with ansible for this exam. As such, ansible setup and explanation will be limited.
 
 **To take the exam, you must have at least an RHCSA. If you are attempting to become a Red Hat Certified Architect, you must have an RHCE.**
 
@@ -1128,7 +1128,7 @@ When the domain was initially setup, we may have used `--no-ntp`, including for 
 ```
 % vi /etc/chrony.conf
 . . .
-# pool 2.rocky.pool.ntp.org iburst
+# pool 2.centos.pool.ntp.org iburst
 server 192.168.15.12
 . . .
 
