add correction for yaml

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -416,6 +416,7 @@ At this point, you will need to configure all the clients with an ansible user a
 
 === "Ansible"
 
+    ``` yaml
     % vi role_ipa_replica.yml
     ---
     - name: "Standup IPA Replica"
