add role_ipa_client.yml example

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -766,7 +766,25 @@ To setup a very, very simple SSO, you can setup a simple location that requires 
 
 === "Ansible"
 
-    . . .
+    Create the role for the client.
+
+    ``` yaml
+    % vi role_ipa_client.yml
+    ---
+    - name: "Enroll client system"
+      hosts: ipaclients
+      become: true
+
+      roles:
+        - role: freeipa.ansible_freeipa.ipaclient
+          state: present
+    ```
+
+    Now run the role to setup the client.
+
+    ``` bash
+    % ansible-playbook role_ipa_client.yml
+    ```
 
 ### Configure Kerberized services
 
